Start buildng out highlights/latest JSON

--- a/parse-white-house-reports.ipynb
+++ b/parse-white-house-reports.ipynb
@@ -15,22 +15,26 @@
     "\n",
     "import os\n",
     "from glob import glob\n",
-    "import csv"
+    "import csv\n",
+    "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "reportdir = \"/var/www/html/misc/20200417-covid-county-analysis/\"   # Blank or ending in a slash\n",
     "if not os.path.exists(reportdir):\n",
-    "    reportdir = \"\"\n",
+    "    reportdir = \"../covid-counties-analysis/\"\n",
+    "    if not os.path.exists(reportdir):\n",
+    "        reportdir = \"\"\n",
     "\n",
     "xlsxdir = \"xlsx/\"\n",
     "csvdir = \"csv/\"\n",
     "summarydir = reportdir + \"white-house-reports/\"\n",
+    "highlightsfile = reportdir + \"ignore/\" + \"white-house-latest.json\"\n",
     "\n",
     "for targetdir in [xlsxdir, csvdir, summarydir]:\n",
     "    os.makedirs(targetdir, exist_ok=True)"
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,21 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 525/525 [00:00<00:00, 834.63it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 531/531 [00:00<00:00, 7512.47it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 new file(s) found\n"
+      "0 new file(s) found\n"
      ]
     },
     {
@@ -128,106 +132,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 263/263 [35:53<00:00,  8.19s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "if newfiles > 0:     # If we need to reparse everything:\n",
-    "    excelfiles = glob(xlsxdir + \"*.xlsx\")\n",
-    "    for excelfilename in tqdm(excelfiles):\n",
-    "        filedate = excelfilename.split(\"_\")[-2]\n",
-    "        csvfilename = csvdir + filedate + \".csv\"\n",
-    "        if not os.path.exists(csvfilename):\n",
-    "            workbook = load_workbook(filename=excelfilename)\n",
-    "            countytab = workbook[\"Counties\"]\n",
-    "            with open(csvfilename, \"w\", newline=\"\", encoding=\"utf-8\") as outfile:\n",
-    "                writer = csv.writer(outfile)\n",
-    "                for entry in list(countytab.iter_rows(values_only=True))[1:]:   # Skip first row\n",
-    "                    writer.writerow(list(entry))\n"
+    "if newfiles == 0:\n",
+    "    print(\"No new files found. Stopping.\")\n",
+    "    sys.exit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 263/263 [00:24<00:00, 10.80it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 263/263 [00:00<00:00, 4873.13it/s]\n"
      ]
     }
    ],
    "source": [
-    "if newfiles > 0:     # If we need to reparse everything:\n",
-    "    masterdict = {}\n",
-    "    csvfiles = list(sorted(glob(csvdir + \"*.csv\")))\n",
-    "    for filenumber, csvfilename in enumerate(tqdm(csvfiles)):\n",
-    "        basefilename = csvfilename.replace(\"\\\\\", \"/\").replace(csvdir, \"\")\n",
-    "        filedate = basefilename.replace(\".csv\", \"\")\n",
-    "        with open(csvfilename, \"r\", encoding=\"utf-8\") as infile:\n",
-    "            reader = csv.DictReader(infile)\n",
-    "            for row in reader:\n",
-    "                fips = row['FIPS code'].zfill(5)\n",
-    "                state = row['State Abbreviation']\n",
-    "                county = row['County']\n",
-    "                cases = row['Cumulative cases']\n",
-    "                deaths = row['Cumulative deaths']\n",
-    "                if cases == \"\":\n",
-    "                    cases = 0\n",
-    "                else:\n",
-    "                    cases = int(cases)\n",
-    "                if deaths == \"\":\n",
-    "                    deaths = 0\n",
-    "                else:\n",
-    "                    deaths = int(deaths)\n",
-    "                if state not in masterdict:\n",
-    "                    masterdict[state] = {}\n",
-    "                if fips not in masterdict[state]:\n",
-    "                    masterdict[state][fips] = {}\n",
-    "                line = {\n",
-    "                    \"fips\": fips,\n",
-    "                    \"state\": state,\n",
-    "                    \"county\": county,\n",
-    "                    \"filedate\": filedate,\n",
-    "                    \"cases\": cases,\n",
-    "                    \"deaths\": deaths\n",
-    "                }\n",
-    "                masterdict[state][fips][filedate] = line   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 52/52 [00:01<00:00, 27.96it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "if newfiles > 0:     # If we need to reparse everything:masterdict = {}\n",
-    "    headers = list(masterdict[state][fips][filedate].keys())\n",
-    "    for state in tqdm(masterdict):\n",
-    "        with open(summarydir + state + \".csv\", \"w\", newline=\"\", encoding=\"utf-8\") as outfile:\n",
+    "excelfiles = glob(xlsxdir + \"*.xlsx\")\n",
+    "for excelfilename in tqdm(excelfiles):\n",
+    "    filedate = excelfilename.split(\"_\")[-2]\n",
+    "    csvfilename = csvdir + filedate + \".csv\"\n",
+    "    if not os.path.exists(csvfilename):\n",
+    "        workbook = load_workbook(filename=excelfilename)\n",
+    "        countytab = workbook[\"Counties\"]\n",
+    "        with open(csvfilename, \"w\", newline=\"\", encoding=\"utf-8\") as outfile:\n",
     "            writer = csv.writer(outfile)\n",
-    "            writer.writerow(headers)\n",
-    "            for fips in sorted(masterdict[state]):\n",
-    "                for filedate in masterdict[state][fips]:\n",
-    "                    writer.writerow(list(masterdict[state][fips][filedate].values()))"
+    "            for entry in list(countytab.iter_rows(values_only=True))[1:]:   # Skip first row\n",
+    "                writer.writerow(list(entry))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 266/266 [00:24<00:00, 10.85it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "masterdict = {}\n",
+    "csvfiles = list(sorted(glob(csvdir + \"*.csv\")))\n",
+    "for filenumber, csvfilename in enumerate(tqdm(csvfiles)):\n",
+    "    basefilename = csvfilename.replace(\"\\\\\", \"/\").replace(csvdir, \"\")\n",
+    "    filedate = basefilename.replace(\".csv\", \"\")\n",
+    "    with open(csvfilename, \"r\", encoding=\"utf-8\") as infile:\n",
+    "        reader = csv.DictReader(infile)\n",
+    "        for row in reader:\n",
+    "            fips = row['FIPS code'].zfill(5)\n",
+    "            state = row['State Abbreviation']\n",
+    "            county = row['County']\n",
+    "            cases = row['Cumulative cases']\n",
+    "            deaths = row['Cumulative deaths']\n",
+    "            if cases == \"\":\n",
+    "                cases = 0\n",
+    "            else:\n",
+    "                cases = int(cases)\n",
+    "            if deaths == \"\":\n",
+    "                deaths = 0\n",
+    "            else:\n",
+    "                deaths = int(deaths)\n",
+    "            if state not in masterdict:\n",
+    "                masterdict[state] = {}\n",
+    "            if fips not in masterdict[state]:\n",
+    "                masterdict[state][fips] = {}\n",
+    "            line = {\n",
+    "                \"fips\": fips,\n",
+    "                \"state\": state,\n",
+    "                \"county\": county,\n",
+    "                \"filedate\": filedate,\n",
+    "                \"cases\": cases,\n",
+    "                \"deaths\": deaths\n",
+    "            }\n",
+    "            masterdict[state][fips][filedate] = line   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 52/52 [00:01<00:00, 27.05it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "headers = list(masterdict[state][fips][filedate].keys())\n",
+    "for state in tqdm(masterdict):\n",
+    "    with open(summarydir + state + \".csv\", \"w\", newline=\"\", encoding=\"utf-8\") as outfile:\n",
+    "        writer = csv.writer(outfile)\n",
+    "        writer.writerow(headers)\n",
+    "        for fips in sorted(masterdict[state]):\n",
+    "            for filedate in masterdict[state][fips]:\n",
+    "                writer.writerow(list(masterdict[state][fips][filedate].values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fips': '12099',\n",
+       " 'state': 'FL',\n",
+       " 'county': 'Palm Beach County, FL',\n",
+       " 'filedate': '20211229',\n",
+       " 'cases': 246123,\n",
+       " 'deaths': 4322}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masterdict[\"FL\"]['12099']['20211229']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "highlightsdict = {}\n",
+    "for state in masterdict:\n",
+    "    for fips in masterdict[state]:\n",
+    "        localdates = list(sorted(masterdict[state][fips].keys()))\n",
+    "        if fips in highlightsdict:\n",
+    "            print(f\"FIPS {fips} was repeated somehow.\")\n",
+    "        highlightsdict[fips] = masterdict[state][fips][localdates[-1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = {}\n",
+    "for fips in list(sorted(highlightsdict.keys())):\n",
+    "    temp[fips] = highlightsdict[fips]\n",
+    "highlightsdict = temp\n",
+    "temp = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(highlightsfile, \"w\") as outfile:\n",
+    "    outfile.write(json.dumps(highlightsdict, indent=\" \" * 4))"
    ]
   },
   {
