Work around bad dates

--- a/parse-white-house-reports.ipynb
+++ b/parse-white-house-reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,20 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 531/531 [00:00<00:00, 7512.47it/s]"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 589/589 [00:00<00:00, 37605.34it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Old basefilename: Community_Profile_Report_20220207.xlsx\n",
+      "New basefilename: Community_Profile_Report_20220207_Public.xlsx\n",
+      "Old basefilename: Community Profile Report 20220207.xlsx\n",
+      "New basefilename: Community_Profile_Report_20220207_Public.xlsx\n",
       "0 new file(s) found\n"
      ]
     },
@@ -115,6 +119,15 @@
     "for entry in tqdm(entries):\n",
     "    basefilename = entry['name']\n",
     "    if \".xlsx\" in basefilename:   # Get just the Excel files\n",
+    "        if \" \" in basefilename:    # sample: 'Community Profile Report 20220207.xlsx'\n",
+    "            print(f\"Old basefilename: {basefilename}\")\n",
+    "            keydate = basefilename.split(\" \")[-1].split(\".xlsx\")[0]\n",
+    "            basefilename = f\"Community_Profile_Report_{keydate}_Public.xlsx\"\n",
+    "            print(f\"New basefilename: {basefilename}\")\n",
+    "        if \"Public\" not in basefilename:\n",
+    "            print(f\"Old basefilename: {basefilename}\")\n",
+    "            basefilename = basefilename.replace(\".xlsx\", \"_Public.xlsx\")                \n",
+    "            print(f\"New basefilename: {basefilename}\")\n",
     "        targetfilename = xlsxdir + basefilename\n",
     "        if not os.path.exists(targetfilename):    # if we haven't already downloaded this\n",
     "            filedate = basefilename.split(\"_\")[-2]\n",
@@ -132,9 +145,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No new files found. Stopping.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python37\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3426: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
     "if newfiles == 0:\n",
     "    print(\"No new files found. Stopping.\")\n",
@@ -143,14 +181,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 263/263 [00:00<00:00, 4873.13it/s]\n"
+      "\r",
+      "  0%|                                                                                          | 0/291 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -170,17 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 266/266 [00:24<00:00, 10.85it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "masterdict = {}\n",
     "csvfiles = list(sorted(glob(csvdir + \"*.csv\")))\n",
